tests/theories/fail/0205-local-modules-in-lemma.ec
type t.

theory T.
  section.
    local module M = {
      var x : t

      proc f() : t = { return x; }
    }.

    lemma L : equiv[M.f ~ M.f : true ==> true].
    proof. admit.
  end section.
end T.
